# a_determiner_cpp

./: .gitignore  CMakeLists.txt  gen_wasm_makefile.py  readme.md  shell.html  wasm.Makefile
maps/: Big.leg  Big.txt  Big4.leg  Big4.txt  Little.leg
maps/old/: silly.lev
src/: Config.cpp  Config.h  EditorState.cpp  EditorState.h  Ext.cpp  Ext.h  GameplayState.cpp  GameplayState.h  GlobalResources.cpp  GlobalResources.h  Globals.cpp  Globals.h  KeyBinds.cpp  KeyBinds.h  KeyLookup.c  KeyLookup.cpp  KeyLookup.h  Teams.h  Terrain.cpp  Terrain.h  main.cpp  old_main.cpp
src/actions/: Action.cpp  Action.h  JumpAction.cpp  JumpAction.h  PortalAction.cpp  PortalAction.h  PotatoAction.cpp  PotatoAction.h  ShootAction.cpp  ShootAction.h  WallAction.cpp  WallAction.h
src/editor/: EditorLevel.cpp  EditorLevel.h  EditorSpawnRegion.cpp  EditorSpawnRegion.h  EditorState.cpp  EditorState.h
src/editor/layers/: Layer.cpp  Layer.h  LayerSpawnRegions.cpp  LayerSpawnRegions.h  LayerTilemap.cpp  LayerTilemap.h
src/editor/widgets/: EditorLayerWidget.cpp  EditorLayerWidget.h  EditorPaletteWidget.cpp  EditorPaletteWidget.h  TeamListWidget.cpp  TeamListWidget.h
src/editor/windows/: EditorImportTilesetWindow.cpp  EditorImportTilesetWindow.h  EditorLayerWindow.cpp  EditorLayerWindow.h  EditorPaletteWindow.cpp  EditorPaletteWindow.h  LeaveEditorWindow.cpp  LeaveEditorWindow.h  NewLevelWindow.cpp  NewLevelWindow.h  ResizeLevelWindow.cpp  ResizeLevelWindow.h  TeamListWindow.cpp  TeamListWindow.h
src/engine/: Globals.cpp  Globals.h  KeyBinds.cpp  KeyBinds.h  KeyLookup.c  KeyLookup.h  TextureRef.cpp  TextureRef.h  TileGrid.cpp  TileGrid.h  Tileset.cpp  Tileset.h
src/engine/metrics/: Graphics.cpp  Graphics.h  MetricsCamera.cpp  MetricsCamera.h
src/engine/object/: BuiltinTypeIDs.h  EntityObject.cpp  EntityObject.h  KinematicObject.cpp  KinematicObject.h  KinematicPrediction.cpp  KinematicPrediction.h  ObjectManager.cpp  ObjectManager.h
src/engine/state/: State.cpp  State.h  StateManager.cpp  StateManager.h
src/engine/tooltip/: Tooltip.cpp  Tooltip.h  TooltipElement.cpp  TooltipElement.h  TooltipHorizontalAlignment.cpp  TooltipHorizontalAlignment.h  TooltipImage.cpp  TooltipImage.h  TooltipText.cpp  TooltipText.h
src/engine/util/: CWD.cpp  CWD.h  DebugOverlay.cpp  DebugOverlay.h  ErrorOr.h  IDBFS.cpp  IDBFS.h  Math.h  Open.cpp  Open.h  Paths.cpp  Paths.h  Scissors.cpp  Scissors.h  String.cpp  String.h  Trace.h  VectorOps.h  WasmFS.cpp  WasmFS.h
src/engine/widgets/: Button.cpp  Button.h  Clickable.cpp  Clickable.h  HLine.cpp  HLine.h  HSplit.cpp  HSplit.h  IntField.cpp  IntField.h  Label.cpp  Label.h  TiledButton.cpp  TiledButton.h  TiledDivision.cpp  TiledDivision.h  VSplit.cpp  VSplit.h  Widget.cpp  Widget.h  WidgetManager.cpp  WidgetManager.h
src/engine/windows/: Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
src/maploaders/: LegacyMapLoader.cpp  LegacyMapLoader.h  LevMapLoader.cpp  LevMapLoader.h  MapLoader.cpp  MapLoader.h
src/menus/: CreditsMenu.cpp  CreditsMenu.h  MainMenu.cpp  MainMenu.h  MapSelectMenu.cpp  MapSelectMenu.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h  PostGameMenu.cpp  PostGameMenu.h
src/object/: EntityObject.h  ObjectManager.cpp  ObjectManager.h
src/objects/: ObjectIDs.h
src/objects/actors/: Bullet.cpp  Bullet.h  Explosion.cpp  Explosion.h  Player.cpp  Player.h  Portal.cpp  Portal.h  Wall.cpp  Wall.h
src/objects/collectibles/: Collectible.cpp  Collectible.h  Constructors.h  EnergyBoost.cpp  EnergyBoost.h  Portalgun.cpp  Portalgun.h  Potato.cpp  Potato.h  StrengthModifier.cpp  StrengthModifier.h  Trowel.cpp  Trowel.h
src/terrain/: BitmapTerrain.cpp  BitmapTerrain.h  Terrain.cpp  Terrain.h  TilemapTerrain.cpp  TilemapTerrain.h
src/util/: Scissors.cpp  Scissors.h
src/utils/: FileOp.cpp  FileOp.h  KeyboardCode.cpp  KeyboardCode.h  TiledBackground.cpp  TiledBackground.h
src/widgets/: ActionWidget.cpp  ActionWidget.h  Button.cpp  Button.h  Clickable.cpp  Clickable.h  EditorLayerWidget.cpp  EditorLayerWidget.h  EditorPaletteWidget.cpp  EditorPaletteWidget.h  FakeActionWidget.cpp  FakeActionWidget.h  HSplit.cpp  HSplit.h  IntField.cpp  Label.cpp  Label.h  PlayerIndicator.cpp  PlayerIndicator.h  VSplit.cpp  Widget.cpp  Widget.h  WidgetManager.cpp
src/windows/: CollectibleSpawnWindow.cpp  CollectibleSpawnWindow.h  EditorImportTilesetWindow.cpp  EditorImportTilesetWindow.h  EditorLayerWindow.cpp  EditorPaletteWindow.cpp  EditorPaletteWindow.h  ErrorWindow.cpp  ErrorWindow.h  NewLevelWindow.cpp  NewLevelWindow.h  Window.cpp  Window.h  WindowManager.cpp
tests/: lev.hexpat  out.lev  silly_better.leg
web/: download_from_fs.js  emscripten_boilerplate.js  prevent_default.js  shell.html
